correctly virtically align all outside borders

--- a/assets/styles/common/_lego-pieces.scss
+++ b/assets/styles/common/_lego-pieces.scss
@@ -6,7 +6,14 @@
  */
 
  /* White Space */
-.gutter-x{ padding-top: ($outer-margin + $gutter-compensation); padding-bottom: ($outer-margin + $gutter-compensation) }
+ .ml0{ margin-left: 0 }
+ .mr0{ margin-right: 0 }
+ 
+.gutter-x-padding{ padding-top: ($outer-margin + $gutter-compensation); padding-bottom: ($outer-margin + $gutter-compensation) }
+.gutter-x-margin{ margin-top: ($outer-margin + $gutter-compensation); margin-bottom: ($outer-margin + $gutter-compensation) }
+
+/* Flex Object */
+.flex{ display: flex }
 
  /* Image Background */
 .bg-cover{ background-size: cover }
