--- a/assets/styles/layouts/_frontpage.scss
+++ b/assets/styles/layouts/_frontpage.scss
@@ -1,5 +1,5 @@
-.hero{
-	background: url(../images/farm.jpg) center center;
-	background-size: cover;
-	height: 100vh;
-}
+// .hero{
+// 	background: url(../images/farm.jpg) center center;
+// 	background-size: cover;
+// 	height: 100vh;
+// }
